--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = https://github.com/vim-scripts/The-NERD-tree.git
+[submodule "bundle/autoclose"]
+	path = bundle/autoclose
+	url = https://github.com/korpz/Autoclose-vim.git
