--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/snippetsemu"]
 	path = bundle/snippetsemu
 	url = https://github.com/vim-scripts/snippetsEmu.git
+[submodule "bundle/vim-task"]
+	path = bundle/vim-task
+	url = https://github.com/samsonw/vim-task.git
